[gd_scene load_steps=2 format=3 uid="uid://b2cm3uyga6gaf"]

[ext_resource type="Script" uid="uid://bk3clkjdhnqgm" path="res://Scripts/MenuPrincipal.gd" id="1_20qv4"]

[node name="EscenaMenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPrincipal" type="CanvasLayer" parent="."]
script = ExtResource("1_20qv4")

[node name="Fondo" type="ColorRect" parent="MenuPrincipal"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.3, 1)

[node name="Titulo" type="Label" parent="MenuPrincipal"]
offset_left = 110.0
offset_top = 200.0
offset_right = 610.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 48
text = "ESQUIVA COSAS"
horizontal_alignment = 1

[node name="BotonTienda" type="Button" parent="MenuPrincipal"]
offset_right = 8.0
offset_bottom = 8.0

[node name="BotonJugar" type="Button" parent="MenuPrincipal"]
offset_left = 260.0
offset_top = 500.0
offset_right = 460.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 32
text = "JUGAR"

[node name="MejorPuntuacion" type="Label" parent="MenuPrincipal"]
offset_left = 210.0
offset_top = 650.0
offset_right = 510.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 28
text = "Mejor Puntuaci√≥n: 0"
horizontal_alignment = 1

[node name="CreditosArtista" type="Label" parent="MenuPrincipal"]
offset_right = 40.0
offset_bottom = 23.0
text = "Arte por: @HISOkDIS"
